fix: actually run DDB mapper operation tests; actually convert high-level update expressions into low-level (#1809)