@@ -50,14 +50,21 @@ allprojects {
         }
     }
 
-    if (testJavaVersion != null) {
-        tasks.withType<Test> {
+    tasks.withType<Test>().configureEach {
+        if (testJavaVersion != null) {
             val toolchains = project.extensions.getByType<JavaToolchainService>()
             javaLauncher.set(
                 toolchains.launcherFor {
                     languageVersion.set(testJavaVersion)
                 },
             )
+        }
+
+        if (testJavaVersion == null || testJavaVersion.asInt() >= 9) {
+            // Required to enable reflective access in testing in JDK 9+.
+            // See smithy-kotlin/runtime/testing/jvm/src/aws/smithy/kotlin/runtime/testing/SystemOverrides.kt for more
+            // info.
+            jvmArgs("--add-opens=java.base/java.util=ALL-UNNAMED")
         }
     }
 
